THRIFT-3170: Add a flag to allow the ignoring of common initialisms in Go